klasszifikáció valós adatokkal

--- a/Temalab_4.ipynb
+++ b/Temalab_4.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "Text(0.5,1,'A logisztikus függvény')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "9  84.432820  43.533393      1"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc4fd2796a0>"
+       "<matplotlib.collections.PathCollection at 0x7fb9a8196fd0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "4.4901448790043155"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,16 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc4f147f668>"
+       "<matplotlib.collections.PathCollection at 0x7fb9a7fc3a20>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "9.992007221626413e-16"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,16 +419,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc4f12fc2e8>"
+       "<matplotlib.collections.PathCollection at 0x7fb9a7faad30>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -464,6 +464,13 @@
     "Konklúzió: a logisztikus regresszió és a lineáris regresszió hasznos dolgok, *HA* sikerül megfelelő feature-öket találnunk. \n",
     "De hogy találjunk jó feature-öket? A kérdést a neurális hálózatok fogják megválaszolni, melyek megtanulják a megfelelő feature-öket is."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
